src/index.css
html,
body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
}

main {
  height: 100%;
  width: 100%;
}

header {
  width: 100%;
  height: 5%;
  margin: 0;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #4698ce;
}

nav {
  display: flex;
  list-style-type: none;
}

li {
  margin: 0 0.5rem;
}

section {
  width: 100%;
  height: 90%;
  margin: 0;
  padding: 0;
  background-color: white;
  display: flex;
  justify-content: center;
  align-items: flex-start;
}

div {
  margin: 0 1rem;
  padding: 0;
  width: auto;
  height: auto;
}

img {
  display: block;
  width: 40%;
  margin: 0 auto 0 auto;
}

footer {
  width: 100%;
  height: 5%;
  margin: 0;
  padding: 0;
  background-color: #4698ce;
}

button {
  background-color: gold;
  color: green;
  border: none;
  width: 4rem;
  height: 2rem;
  border-radius: 0.5rem;
  margin: 0 1rem;
}

h1 {
  margin: 0 1rem;
  padding: 0;
  color: white;
  font-size: 1rem;
}

h2 {
  text-align: center;
  margin: 1rem 0 0 0;
  color: gold;
  font-size: 1rem;
}

h3 {
  margin: 1rem 0;
  font-size: 1rem;
}

ul {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
  margin: 0;
  color: white;
  font-size: 1;
  font-weight: bold;
  font-size: 1rem;
}

a:hover {
  color: lightblue;
  background-color: white;
}

a:focus {
  background-color: rgb(61, 61, 68);
}

.sub {
  margin: 0;
  padding: 0;
  text-align: center;
  font-size: 1rem;
  font-weight: lighter;
}

.handles {
  margin: 0;
}

.contactinfo {
  display: flex;
  justify-content: start;
  align-items: center;
  margin: 1rem 0;
}

.infoDiv {
  margin: 0 2rem 0 0;
}

.text {
  color: black;
  font-size: 1rem;
  padding: 0;
  margin: 0;
}

.bold {
  font-weight: bold;
}

.xpItem {
  font-size: 1rem;
  color: black;
}

.row {
  display: flex;
  justify-content: start;
  align-items: start;
}

.xpRow {
  display: grid;
  width: 100%;
  height: auto;
  grid-template-columns: 30% 70%;
  grid-template-rows: 100%;
  grid-gap: 0;
  margin: 0;
}

.left {
  grid-row: 1/ 1;
  grid-column: 1/ 1;
  margin: 0;
}

.right {
  grid-row: 1/ 1;
  grid-column: 2/ 3;
}

.footer {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

.fBtn:hover {
  background-color: lightblue;
}

.url {
  color: lightblue;
  font-size: 1rem;
}

@media only screen and (max-width: 320px) {
  a {
    font-size: 0.75rem;
  }
}

@media only screen and (min-width: 768px) {
  h1 {
    font-size: 2rem;
  }
  a {
    font-size: 1.5rem;
  }
  h2 {
    font-size: 2rem;
  }
  img {
    width: 25%;
  }
  h3 {
    font-size: 2rem;
  }
  div {
    width: 90%;
  }
}

@media only screen and (min-width: 1024px) {
  h1 {
    font-size: 2rem;
  }
  a {
    font-size: 1.5rem;
  }
  h2 {
    font-size: 2rem;
  }
  img {
    width: 25%;
  }
  h3 {
    font-size: 2rem;
  }
  div {
    width: 70%;
  }
}

@media only screen and (min-width: 1440px) {
  h1 {
    font-size: 2rem;
  }
  a {
    font-size: 1.5rem;
  }
  h2 {
    font-size: 2rem;
  }
  img {
    width: 25%;
  }
  h3 {
    font-size: 2rem;
  }
  div {
    width: 60%;
  }
}

